--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -11,4 +11,4 @@ AppBundle\Entity\GenusNote:
     username: <userName()>
     userAvatarFilename: '50% leanna.jpen: ryan.jpeg'
     note: <paragraph()>
-    createdAt: <dateTimeBetween('-6 months','now'>
+    createdAt: <dateTimeBetween('-6 months','now')>
